--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,3 +1,5 @@
+<%- include('../includes/functions.ejs') %>
+
 <%- include('../includes/head.ejs') %>
     <body>
 
@@ -30,15 +32,16 @@
                         />
                     <% } %>
                     <% if(product.price > 0) { %>
-                        <h3 class="text-center">$<%= (product.price * 0.01).toFixed(2) %></h3>
+                        <h3 class="text-center"><%= formatCentsToDollars(product.price) %></h3>
                         <% } else { %>
                         <h3 class="text-center">Free</h3>
                     <% } %>
                     <p><%= product.description || 'No description' %></p>
                     <div class="row">
                         <form action="/admin/delete_product" method="POST">
-                            <a href="/admin/edit_product" class="btn btn-primary" >Edit</a>
+                            <a href="/admin/edit_product/<%= product.uid %>" class="btn btn-primary" >Edit</a>
                             <button class="btn btn-primary" type="submit">Delete</button>
+                            <input type="hidden" name="uid" value="<%= product.uid %>" />
                         </form>
                     </div>
                 </div>
