--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -1,3 +1,5 @@
+<% include('../includes/functions.ejs') %>
+
 <%- include('../includes/head.ejs') %>
     <body>
 
@@ -14,7 +16,7 @@
             <div class="row justify-center">
                 <div class="col justify-center p-3">
                     <% if(product.price > 0) { %>
-                        <h3 class="text-center">$<%= (product.price * 0.01).toFixed(2) %></h3>
+                        <h3 class="text-center"><%= formatCentsToDollars(product.price) %></h3>
                     <% } else { %>
                         <h3 class="text-center">Free</h3>
                     <% } %>
