--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -1,3 +1,5 @@
+<% include('../includes/functions.ejs') %>
+
 <%- include('../includes/head.ejs') %>
     <body>
 
@@ -30,7 +32,7 @@
                         />
                     <% } %>
                     <% if(product.price > 0) { %>
-                        <h3 class="text-center">$<%= (product.price * 0.01).toFixed(2) %></h3>
+                        <h3 class="text-center"><%= formatCentsToDollars(product.price) %></h3>
                         <% } else { %>
                         <h3 class="text-center">Free</h3>
                     <% } %>
