--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,20 +1,24 @@
 <%- include('../includes/head.ejs') %>
 
-    <body>
-
+<body>
     <%- include('../includes/header-nav.ejs') %>
 
-        <main>
-            <form class="container" action="/admin/product" method="POST">
-                <input type="text" name="title" placeholder="Title" />
-                <input type="number" name="price" placeholder="Price" step="0.01" />
-                <textarea type="text" name="description" placeholder="Description" rows="4"></textarea>
-                <input type="file" name="image" />
-                <button class="btn btn-primary" type="submit">
-                    Add Product
-                </button>
-            </form>
-        </main>
-    </body>
+    <main>
+        <form class="container" action="/admin/product" method="POST">
+            <input type="text" name="title" placeholder="Title" />
+            <input type="number" name="price" placeholder="Price" step="0.01" />
+            <textarea
+                type="text"
+                name="description"
+                placeholder="Description"
+                rows="4"
+            ></textarea>
+            <input type="file" name="imageUri" />
+            <button class="btn btn-primary" type="submit">
+                Add Product
+            </button>
+        </form>
+    </main>
+</body>
 
 <%- include('../includes/footer.ejs') %>
