--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,56 +1,53 @@
-<%- include('../includes/functions.ejs') %>
+<%- include('../includes/functions.ejs') %> <%- include('../includes/head.ejs')
+%>
+<body>
+    <%- include('../includes/header-nav.ejs') %>
 
-<%- include('../includes/head.ejs') %>
-    <body>
-
-        <%- include('../includes/header-nav.ejs') %>
-
-        <main class="container">
-            <% if(products.length > 0) { %>
-            <div class="grid-4">
-                <% for(let product of products) { %>
-                <div
-                    class="card elevation col justify-space-between align-center"
-                >
-                    <h2
-                        class="text-center"
-                        style="height: 45px; overflow: hidden;"
-                    >
-                        <%= product.title || 'New Book' %>
-                    </h2>
-                    <% if(product.image) { %>
-                        <img
-                            src="<%= product.image %>"
-                            alt="<% product.title %>"
-                            style="height: 150px; width: 100px;"
-                        />
-                        <% } else { %>
-                        <img
-                            src="https://quittingbydesign.com/wp-content/uploads/2018/09/image-coming-soon-placeholder.jpg"
-                            alt="<% product.title %>"
-                            style="height: 150px; width: 100px;"
-                        />
-                    <% } %>
-                    <% if(product.price > 0) { %>
-                        <h3 class="text-center"><%= formatCentsToDollars(product.price) %></h3>
-                        <% } else { %>
-                        <h3 class="text-center">Free</h3>
-                    <% } %>
-                    <p><%= product.description || 'No description' %></p>
-                    <div class="row">
-                        <form action="/admin/delete_product" method="POST">
-                            <a href="/admin/edit_product/<%= product.uid %>" class="btn btn-primary" >Edit</a>
-                            <button class="btn btn-primary" type="submit">Delete</button>
-                            <input type="hidden" name="uid" value="<%= product.uid %>" />
-                        </form>
-                    </div>
-                </div>
+    <main class="container">
+        <% if(products.length > 0) { %>
+        <div class="grid-4">
+            <% for(let product of products) { %>
+            <div class="card elevation col justify-space-between align-center">
+                <h2 class="text-center" style="height: 45px; overflow: hidden;">
+                    <%= product.title || 'New Book' %>
+                </h2>
+                <img
+                    src="<%= product.imageUri %>"
+                    alt="<% product.title %>"
+                    style="height: 150px; width: 100px;"
+                />
+                <% if(product.price > 0) { %>
+                <h3 class="text-center">
+                    <%= formatCentsToDollars(product.price) %>
+                </h3>
+                <% } else { %>
+                <h3 class="text-center">Free</h3>
                 <% } %>
+                <p><%= product.description || 'No description' %></p>
+                <div class="row">
+                    <form action="/admin/delete_product" method="POST">
+                        <a
+                            href="/admin/edit_product/<%= product.id %>"
+                            class="btn btn-primary"
+                            >Edit</a
+                        >
+                        <button class="btn btn-primary" type="submit">
+                            Delete
+                        </button>
+                        <input
+                            type="hidden"
+                            name="id"
+                            value="<%= product.id %>"
+                        />
+                    </form>
+                </div>
             </div>
-            <% } else { %>
-            <h2>No products available</h2>
             <% } %>
-        </main>
-    </body>
+        </div>
+        <% } else { %>
+        <h2>No products available</h2>
+        <% } %>
+    </main>
+</body>
 
 <%- include('../includes/footer.ejs') %>
