--- a/views/includes/addToCartButton.ejs
+++ b/views/includes/addToCartButton.ejs
@@ -1,4 +1,4 @@
 <form action="/cart" method="POST" class="text-center">
-  <button class="btn btn-primary" type="submit">Add To Cart</button>
-  <input type="hidden" name="uid" value="<%= product.uid %>" />
+    <button class="btn btn-primary" type="submit">Add To Cart</button>
+    <input type="hidden" name="id" value="<%= product.id %>" />
 </form>
