--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -1,53 +1,41 @@
-<% include('../includes/functions.ejs') %>
+<% include('../includes/functions.ejs') %> <%- include('../includes/head.ejs')
+%>
+<body>
+    <%- include('../includes/header-nav.ejs') %>
 
-<%- include('../includes/head.ejs') %>
-    <body>
-
-        <%- include('../includes/header-nav.ejs') %>
-
-        <main class="container">
-            <% if(products.length > 0) { %>
-            <div class="grid-4">
-                <% for(let product of products) { %>
-                <div
-                    class="card elevation col justify-space-between align-center"
-                >
-                    <h2
-                        class="text-center"
-                        style="height: 45px; overflow: hidden;"
-                    >
-                        <%= product.title || 'New Book' %>
-                    </h2>
-                    <% if(product.image) { %>
-                        <img
-                            src="<%= product.image %>"
-                            alt="<% product.title %>"
-                            style="height: 150px; width: 100px;"
-                        />
-                        <% } else { %>
-                        <img
-                            src="https://quittingbydesign.com/wp-content/uploads/2018/09/image-coming-soon-placeholder.jpg"
-                            alt="<% product.title %>"
-                            style="height: 150px; width: 100px;"
-                        />
-                    <% } %>
-                    <% if(product.price > 0) { %>
-                        <h3 class="text-center"><%= formatCentsToDollars(product.price) %></h3>
-                        <% } else { %>
-                        <h3 class="text-center">Free</h3>
-                    <% } %>
-                    <p><%= product.description || 'No description' %></p>
-                    <a class="btn btn-primary" href="/products/<%= product.uid %>">Details</a>
-
-                    <%- include('../includes/addToCartButton.ejs', { product }) %>
-
-                </div>
+    <main class="container">
+        <% if(products.length > 0) { %>
+        <div class="grid-4">
+            <% for(let product of products) { %>
+            <div class="card elevation col justify-space-between align-center">
+                <h2 class="text-center" style="height: 45px; overflow: hidden;">
+                    <%= product.title || 'New Book' %>
+                </h2>
+                <img
+                    src="<%= product.imageUri %>"
+                    alt="<% product.title %>"
+                    style="height: 150px; width: 100px;"
+                />
+                <% if(product.price > 0) { %>
+                <h3 class="text-center">
+                    <%= formatCentsToDollars(product.price) %>
+                </h3>
+                <% } else { %>
+                <h3 class="text-center">Free</h3>
                 <% } %>
+                <p><%= product.description || 'No description' %></p>
+                <a class="btn btn-primary" href="/products/<%= product.id %>"
+                    >Details</a
+                >
+
+                <%- include('../includes/addToCartButton.ejs', { product }) %>
             </div>
-            <% } else { %>
-            <h2>No products available</h2>
             <% } %>
-        </main>
-    </body>
+        </div>
+        <% } else { %>
+        <h2>No products available</h2>
+        <% } %>
+    </main>
+</body>
 
 <%- include('../includes/footer.ejs') %>
