Added user, cart, order and relational models

--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -28,10 +28,12 @@
                     <form action="/admin/delete_product" method="POST">
                         <a
                             href="/admin/edit_product/<%= product.id %>"
-                            class="btn btn-primary"
-                            >Edit</a
+                            class="btn btn-linear btn-sm"
+                            style="color: #FFFFFF"
                         >
-                        <button class="btn btn-primary" type="submit">
+                            Edit
+                        </a>
+                        <button class="btn btn-linear btn-sm" type="submit">
                             Delete
                         </button>
                         <input
