--- a/public/css/global.css
+++ b/public/css/global.css
@@ -106,10 +106,12 @@ img {
 
 /* Alignment */
 .col {
+    display: flex;
     flex-direction: column;
 }
 
 .row {
+    display: flex;
     flex-direction: row;
 }
 
@@ -363,10 +365,19 @@ img {
     padding: 0.4rem 1.3rem;
     font-size: 1rem;
     border: none;
+    border-radius: 4px;
     cursor: pointer;
     margin-right: 0.5rem;
     transition: opacity 0.2s ease-in;
     outline: none;
+}
+
+.btn-linear {
+    background-image: linear-gradient(
+        var(--primary-color),
+        var(--primary-color-darken)
+    );
+    color: #fff;
 }
 
 .btn-link {
