--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -14,7 +14,7 @@
                 rows="4"
             ></textarea>
             <input type="file" name="imageUri" />
-            <button class="btn btn-primary" type="submit">
+            <button class="btn btn-linear" type="submit">
                 Add Product
             </button>
         </form>
