--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -32,7 +32,7 @@
                 value="<%= product.imageUri %>"
             />
             <input type="hidden" name="id" value="<%= product.id %>" />
-            <button class="btn btn-primary" type="submit">
+            <button class="btn btn-linear" type="submit">
                 Save
             </button>
         </form>
