--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -4,40 +4,38 @@
     <%- include('../includes/header-nav.ejs') %>
     <main class="container">
         <% if(products && products.length > 0) { %>
-        <div class="grid-4">
+        <div>
             <% for(let item of products) { %>
-            <div class="card elevation col justify-space-between align-center">
-                <h2 class="text-center" style="height: 45px; overflow: hidden;">
-                    <%= item.productData.title || 'New Book' %>
+            <div class="card elevation row justify-space-between align-center">
+                <h2 class="text-center" style="overflow: hidden;">
+                    <%= item.title || 'New Book' %>
                 </h2>
                 <img
-                    src="<%= item.productData.imageUri %>"
-                    alt="<% item.productData.title %>"
-                    style="height: 150px; width: 100px;"
+                    src="<%= item.imageUri %>"
+                    alt="<% item.title %>"
+                    style="height: 100px; width: 100px;"
                 />
-                <% if(item.productData.price > 0) { %>
-                <h3 class="text-center">
-                    <%= formatCentsToDollars(item.productData.price) %>
-                </h3>
-                <% } else { %>
-                <h3 class="text-center">Free</h3>
-                <% } %>
-                <p><%= item.productData.description || 'No description' %></p>
-                <div class="row">
+                <div class="row align-center">
+                    <% if(item.price > 0) { %>
+                        <h3 class="text-center mr-2">
+                            <%= formatCentsToDollars(item.price) %>
+                        </h3>
+                    <% } else { %>
+                        <h3 class="text-center mr-2">Free</h3>
+                    <% } %>
+                    <h3 class="text-center mr-2">
+                        <%= item.cartProduct.quantity %>
+                    </h3>
                     <form action="/cart_delete_item" method="POST">
-                        <button class="btn btn-primary" type="submit">
+                        <button class="btn btn-linear btn-sm ml-2" type="submit">
                             Remove
                         </button>
-                        <input
-                            type="hidden"
-                            name="id"
-                            value="<%= item.productData.id %>"
-                        />
+                        <input type="hidden" name="id" value="<%= item.id %>" />
                     </form>
                 </div>
             </div>
             <% } %>
-        </div>
+        </!-->
         <% } else { %>
         <h1>Your cart is empty</h1>
         <% } %>
