--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -21,7 +21,8 @@
                 </h3>
                 <p><%= product.description || 'No description' %></p>
 
-                <%- include('../includes/addToCartButton.ejs', { product }) %>
+                <%- include('../includes/addToCartButton.ejs', { product, small:
+                true }) %>
             </div>
             <% } %>
         </div>
