--- a/views/includes/addToCartButton.ejs
+++ b/views/includes/addToCartButton.ejs
@@ -1,9 +1,9 @@
 <form action="/cart" method="POST" class="text-center">
-    <button
-        class="btn btn-linear <%= small ? 'btn-sm' : ''%> ? 'btn-sm' : undefined"
-        type="submit"
-    >
-        Add To Cart
-    </button>
-    <input type="hidden" name="id" value="<%= product.id %>" />
+  <button
+    class="btn btn-linear <%= small ? 'btn-sm' : ''%> ? 'btn-sm' : undefined"
+    type="submit"
+  >
+    Add To Cart
+  </button>
+  <input type="hidden" name="id" value="<%= product._id %>" />
 </form>
