--- a/public/css/global.css
+++ b/public/css/global.css
@@ -2,516 +2,517 @@
 
 /* Global Styles */
 :root {
-    --primary-color: #00a7e9;
-    --primary-color-darken: #0285b9;
-    --dark-color: #333333;
-    --dark-color-lighten: #666666;
-    --light-color: #f4f4f4;
-    --danger-color: #dc3545;
-    --success-color: #28a745;
-    --accent-color: #f8d01c;
-    --accent-color-darken: #c4a20f;
+  --primary-color: #00a7e9;
+  --primary-color-lighten: #00a7e994;
+  --primary-color-darken: #0285b9;
+  --dark-color: #333333;
+  --dark-color-lighten: #666666;
+  --light-color: #f4f4f4;
+  --danger-color: #dc3545;
+  --success-color: #28a745;
+  --accent-color: #f8d01c;
+  --accent-color-darken: #c4a20f;
 }
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1rem;
-    line-height: 1.6;
-    background-color: rgb(243, 243, 243);
-    color: #333;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+  line-height: 1.6;
+  background-color: rgb(243, 243, 243);
+  color: #333;
 }
 
 a {
-    color: var(--primary-color);
-    text-decoration: none;
+  color: var(--primary-color);
+  text-decoration: none;
 }
 
 a:hover {
-    color: var(--dark-color-lighten);
+  color: var(--dark-color-lighten);
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
 
 /* Utilities */
 .container {
-    max-width: 1100px;
-    margin: auto;
-    overflow: hidden;
-    padding: 0 2rem;
+  max-width: 1100px;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 2rem;
 }
 
 /* Text Styles*/
 .x-large {
-    font-size: 4rem;
-    line-height: 1.2;
-    margin-bottom: 1rem;
+  font-size: 4rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
 }
 
 .large {
-    font-size: 3rem;
-    line-height: 1.2;
-    margin-bottom: 1rem;
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
 }
 
 .lead {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .text-primary {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
 
 .text-dark {
-    color: var(--dark-color);
+  color: var(--dark-color);
 }
 
 .text-accent {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .text-success {
-    color: var(--success-color);
+  color: var(--success-color);
 }
 
 .text-danger {
-    color: var(--danger-color);
+  color: var(--danger-color);
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .text-right {
-    text-align: right;
+  text-align: right;
 }
 
 .text-left {
-    text-align: left;
+  text-align: left;
 }
 
 .bold {
-    font-weight: 800;
+  font-weight: 800;
 }
 
 /* Alignment */
 .col {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .row {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .all-center {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: auto;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .align-center {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .justify-center {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .justify-space-between {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 /* Cards */
 .card {
-    padding: 1rem;
-    border: #ccc 1px solid;
-    border-radius: 3px;
-    margin: 0.7rem 0;
+  padding: 1rem;
+  border: #ccc 1px solid;
+  border-radius: 3px;
+  margin: 0.7rem 0;
 }
 
 .card:hover {
-    box-shadow: 2px 2px 2px rgb(82, 82, 82);
-    border: rgb(139, 139, 139) 1px solid;
+  box-shadow: 2px 2px 2px rgb(82, 82, 82);
+  border: rgb(139, 139, 139) 1px solid;
 }
 
 .elevation {
-    box-shadow: 2px 2px 2px gray;
+  box-shadow: 2px 2px 2px gray;
 }
 
 /* List */
 .list {
-    margin: 0.5rem 0;
+  margin: 0.5rem 0;
 }
 
 .list li {
-    padding-bottom: 0.3rem;
+  padding-bottom: 0.3rem;
 }
 
 /* Padding */
 .p {
-    padding: 0.5rem;
+  padding: 0.5rem;
 }
 .p-1 {
-    padding: 1rem;
+  padding: 1rem;
 }
 .p-2 {
-    padding: 2rem;
+  padding: 2rem;
 }
 .p-3 {
-    padding: 3rem;
+  padding: 3rem;
 }
 .py {
-    padding: 0.5rem 0;
+  padding: 0.5rem 0;
 }
 .py-1 {
-    padding: 1rem 0;
+  padding: 1rem 0;
 }
 .py-2 {
-    padding: 2rem 0;
+  padding: 2rem 0;
 }
 .py-3 {
-    padding: 3rem 0;
+  padding: 3rem 0;
 }
 .px {
-    padding: 0 0.5rem;
+  padding: 0 0.5rem;
 }
 .px-1 {
-    padding: 0 1rem;
+  padding: 0 1rem;
 }
 .px-2 {
-    padding: 0 2rem;
+  padding: 0 2rem;
 }
 .px-3 {
-    padding: 0 3rem;
+  padding: 0 3rem;
 }
 .pl {
-    padding-left: 0.5rem;
+  padding-left: 0.5rem;
 }
 .pl-1 {
-    padding-left: 1rem;
+  padding-left: 1rem;
 }
 .pl-2 {
-    padding-left: 2rem;
+  padding-left: 2rem;
 }
 .pl-3 {
-    padding-left: 3rem;
+  padding-left: 3rem;
 }
 .pr {
-    padding-left: 0.5rem;
+  padding-left: 0.5rem;
 }
 .pr-1 {
-    padding-left: 1rem;
+  padding-left: 1rem;
 }
 .pr-2 {
-    padding-left: 2rem;
+  padding-left: 2rem;
 }
 .pr-3 {
-    padding-left: 3rem;
+  padding-left: 3rem;
 }
 .pt {
-    padding-top: 0.5rem;
+  padding-top: 0.5rem;
 }
 .pt-1 {
-    padding-top: 1rem;
+  padding-top: 1rem;
 }
 .pt-2 {
-    padding-top: 2rem;
+  padding-top: 2rem;
 }
 .pt-3 {
-    padding-top: 3rem;
+  padding-top: 3rem;
 }
 .pb {
-    padding-bottom: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 .pb-1 {
-    padding-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 .pb-2 {
-    padding-bottom: 2rem;
+  padding-bottom: 2rem;
 }
 .pb-3 {
-    padding-bottom: 3rem;
+  padding-bottom: 3rem;
 }
 
 /* Margin */
 .m {
-    margin: 0.5rem;
+  margin: 0.5rem;
 }
 .m-1 {
-    margin: 1rem;
+  margin: 1rem;
 }
 .m-2 {
-    margin: 2rem;
+  margin: 2rem;
 }
 .m-3 {
-    margin: 3rem;
+  margin: 3rem;
 }
 .my {
-    margin: 0.5rem 0;
+  margin: 0.5rem 0;
 }
 .my-1 {
-    margin: 1rem 0;
+  margin: 1rem 0;
 }
 .my-2 {
-    margin: 2rem 0;
+  margin: 2rem 0;
 }
 .my-3 {
-    margin: 3rem 0;
+  margin: 3rem 0;
 }
 .mx {
-    margin: 0 0.5rem;
+  margin: 0 0.5rem;
 }
 .mx-1 {
-    margin: 0 1rem;
+  margin: 0 1rem;
 }
 .mx-2 {
-    margin: 0 2rem;
+  margin: 0 2rem;
 }
 .mx-3 {
-    margin: 0 3rem;
+  margin: 0 3rem;
 }
 .ml {
-    margin-left: 0.5rem;
+  margin-left: 0.5rem;
 }
 .ml-1 {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 .ml-2 {
-    margin-left: 2rem;
+  margin-left: 2rem;
 }
 .ml-3 {
-    margin-left: 3rem;
+  margin-left: 3rem;
 }
 .mr {
-    margin-left: 0.5rem;
+  margin-left: 0.5rem;
 }
 .mr-1 {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 .mr-2 {
-    margin-left: 2rem;
+  margin-left: 2rem;
 }
 .mr-3 {
-    margin-left: 3rem;
+  margin-left: 3rem;
 }
 .mt {
-    margin-top: 0.5rem;
+  margin-top: 0.5rem;
 }
 .mt-1 {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 .mt-2 {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 .mt-3 {
-    margin-top: 3rem;
+  margin-top: 3rem;
 }
 .mb {
-    margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 .mb-1 {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 .mb-2 {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 .mb-3 {
-    margin-bottom: 3rem;
+  margin-bottom: 3rem;
 }
 
 /* Grid */
 .grid-2 {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1rem;
 }
 
 .grid-3 {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
 }
 
 .grid-4 {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1rem;
 }
 
 /* buttons */
 .btn {
-    display: inline-block;
-    background: var(--light-color);
-    color: var(--dark-color);
-    padding: 0.4rem 1.3rem;
-    font-size: 1rem;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-right: 0.5rem;
-    transition: opacity 0.2s ease-in;
-    outline: none;
+  display: inline-block;
+  background: var(--light-color);
+  color: var(--dark-color);
+  padding: 0.4rem 1.3rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 0.5rem;
+  transition: opacity 0.2s ease-in;
+  outline: none;
 }
 
 .btn-linear {
-    background-image: linear-gradient(
-        var(--primary-color),
-        var(--primary-color-darken)
-    );
-    color: #fff;
+  background-image: linear-gradient(
+    var(--primary-color),
+    var(--primary-color-darken)
+  );
+  color: #fff;
 }
 
 .btn-linear-accent {
-    background-image: linear-gradient(
-        var(--accent-color),
-        var(--accent-color-darken)
-    );
-    color: var(--dark-color);
+  background-image: linear-gradient(
+    var(--accent-color),
+    var(--accent-color-darken)
+  );
+  color: var(--dark-color);
 }
 
 .btn-link {
-    background: none;
-    padding: 0;
-    margin: 0;
-    color: var(--primary-color);
-    text-decoration: none;
-    cursor: pointer;
+  background: none;
+  padding: 0;
+  margin: 0;
+  color: var(--primary-color);
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .btn-block {
-    display: block;
-    width: 100%;
+  display: block;
+  width: 100%;
 }
 
 .btn-sm {
-    font-size: 0.8rem;
-    padding: 0.3rem 1rem;
-    margin-right: 0.2rem;
+  font-size: 0.8rem;
+  padding: 0.3rem 1rem;
+  margin-right: 0.2rem;
 }
 
 .badge {
-    display: inline-block;
-    font-size: 0.8rem;
-    padding: 0.2rem 0.7rem;
-    text-align: center;
-    margin: 0.3rem;
-    background: var(--light-color);
-    color: var(--dark-color);
-    border-radius: 5px;
+  display: inline-block;
+  font-size: 0.8rem;
+  padding: 0.2rem 0.7rem;
+  text-align: center;
+  margin: 0.3rem;
+  background: var(--light-color);
+  color: var(--dark-color);
+  border-radius: 5px;
 }
 
 .alert {
-    padding: 0.7rem;
-    margin: 1rem 0;
-    opacity: 0.9;
-    background: var(--light-color);
-    color: var(--dark-color);
+  padding: 0.7rem;
+  margin: 1rem 0;
+  opacity: 0.9;
+  background: var(--light-color);
+  color: var(--dark-color);
 }
 
 .btn-primary,
 .bg-primary,
 .badge-primary,
 .alert-primary {
-    background: var(--primary-color);
-    color: #fff;
+  background: var(--primary-color);
+  color: #fff;
 }
 
 .btn-light,
 .bg-light,
 .badge-light,
 .alert-light {
-    background: var(--light-color);
-    color: var(--dark-color);
+  background: var(--light-color);
+  color: var(--dark-color);
 }
 
 .btn-accent,
 .bg-accent,
 .badge-accent,
 .alert-accent {
-    background: var(--accent-color);
-    color: var(--dark-color);
+  background: var(--accent-color);
+  color: var(--dark-color);
 }
 
 .btn-dark,
 .bg-dark,
 .badge-dark,
 .alert-dark {
-    background: var(--dark-color);
-    color: #fff;
+  background: var(--dark-color);
+  color: #fff;
 }
 
 .btn-danger,
 .bg-danger,
 .badge-danger,
 .alert-danger {
-    background: var(--danger-color);
-    color: #fff;
+  background: var(--danger-color);
+  color: #fff;
 }
 
 .btn-success,
 .bg-success,
 .badge-success,
 .alert-success {
-    background: var(--success-color);
-    color: #fff;
+  background: var(--success-color);
+  color: #fff;
 }
 
 .btn-white,
 .bg-white,
 .badge-white,
 .alert-white {
-    background: #fff;
-    background: var(--dark-color);
-    border: #ccc solid 1px;
+  background: #fff;
+  background: var(--dark-color);
+  border: #ccc solid 1px;
 }
 
 .btn:hover {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 .bg-light,
 .badge-light {
-    border: #ccc solid 1px;
+  border: #ccc solid 1px;
 }
 
 .round-img {
-    border-radius: 50%;
+  border-radius: 50%;
 }
 
 /* Forms */
 input {
-    margin: 1.2rem 0;
+  margin: 1.2rem 0;
 }
 
 .form-text {
-    display: block;
-    margin-top: 0.3rem;
-    color: #888;
+  display: block;
+  margin-top: 0.3rem;
+  color: #888;
 }
 
 input[type='text'],
@@ -521,103 +522,104 @@ input[type='date'],
 input[type='number'],
 select,
 textarea {
-    display: block;
-    width: 100%;
-    padding: 0.4rem;
-    font-size: 1.2rem;
-    border: 1px solid #ccc;
+  display: block;
+  width: 100%;
+  padding: 0.4rem;
+  font-size: 1.2rem;
+  border: 1px solid #ccc;
 }
 
 input[type='file'] {
-    display: flex;
-    align-items: center;
-    padding: 0.4rem;
-    font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  padding: 0.4rem;
+  font-size: 1.2rem;
 }
 
 input[type='submit'],
 input[type='button'],
 button {
-    font: inherit;
+  font: inherit;
 }
 
 table th,
 table td {
-    padding: 1rem;
-    text-align: left;
+  padding: 1rem;
+  text-align: left;
 }
 
 table th {
-    background: var(--light-color);
+  background: var(--light-color);
 }
 
 /* Navbar */
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.7rem 2rem;
-    z-index: 1;
-    width: 100%;
-    opacity: 0.9;
-    margin-bottom: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.7rem 2rem;
+  z-index: 1;
+  width: 100%;
+  opacity: 0.9;
+  margin-bottom: 1rem;
 }
 
 .navbar ul {
-    display: flex;
+  display: flex;
 }
 
 .navbar a {
-    color: var(--primary-color);
-    padding: 0.45rem;
-    margin: 0 0.25rem;
+  color: var(--primary-color);
+  padding: 0.45rem;
+  margin: 0 0.25rem;
 }
 
 .navbar a:hover {
-    color: var(--dark-color);
+  color: var(--dark-color);
 }
 
 .navbar .active {
-    color: var(--primary-color-darken);
+  color: var(--dark-color);
+  background-color: var(--primary-color-lighten);
 }
 
 .navbar .welcome span {
-    margin-right: 0.6rem;
+  margin-right: 0.6rem;
 }
 
 /* Mobile Styles */
 @media (max-width: 700px) {
-    .hide-sm {
-        display: none;
-    }
+  .hide-sm {
+    display: none;
+  }
 
-    .grid-2,
-    .grid-3,
-    .grid-4 {
-        grid-template-columns: 1fr;
-    }
+  .grid-2,
+  .grid-3,
+  .grid-4 {
+    grid-template-columns: 1fr;
+  }
 
-    /* Text Styles */
-    .x-large {
-        font-size: 3rem;
-    }
+  /* Text Styles */
+  .x-large {
+    font-size: 3rem;
+  }
 
-    .large {
-        font-size: 2rem;
-    }
+  .large {
+    font-size: 2rem;
+  }
 
-    .lead {
-        font-size: 1rem;
-    }
+  .lead {
+    font-size: 1rem;
+  }
 
-    /* Navbar */
-    .navbar {
-        display: block;
-        text-align: center;
-    }
+  /* Navbar */
+  .navbar {
+    display: block;
+    text-align: center;
+  }
 
-    .navbar ul {
-        text-align: center;
-        justify-content: center;
-    }
+  .navbar ul {
+    text-align: center;
+    justify-content: center;
+  }
 }
