--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,28 +1,31 @@
-<%- include('../includes/head.ejs') %>
+<% include('../includes/functions.ejs') %> <%- include('../includes/head.ejs')
+%>
 <body>
-    <%- include('../includes/header-nav.ejs') %>
-    <main>
-        <% if (orders.length <= 0) { %>
-        <h1>You don't have any orders yet</h1>
-        <% } else { %>
-        <ul>
-            <% orders.forEach(order =>{ %>
+  <%- include('../includes/header-nav.ejs') %>
+  <main class="container">
+    <% if (orders.length <= 0) { %>
+    <h2>You don't have any orders yet</h2>
+    <% } else { %>
+    <ul>
+      <% orders.forEach(order =>{ %>
+      <li>
+        <div class="card">
+          <h2>Order # <%= order._id %></h2>
+          <ul>
+            <% order.items.forEach(product => { %>
             <li>
-                <h1># <%= order.id %></h1>
-                <ul>
-                    <% order.products.forEach(product => { %>
-                    <li>
-                        <%= product.title %> (<%= product.orderProduct.quantity
-                        %>)
-                    </li>
-
-                    <% }) %>
-                </ul>
+              <%= product.title %> (<%= product.quantity %>) <%=
+              formatCentsToDollars(product.price) %>
             </li>
+
             <% }) %>
-        </ul>
-        <% } %>
-    </main>
+          </ul>
+        </div>
+      </li>
+      <% }) %>
+    </ul>
+    <% } %>
+  </main>
 </body>
 
 <%- include('../includes/footer.ejs') %>
