--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -1,46 +1,44 @@
 <% include('../includes/functions.ejs') %> <%- include('../includes/head.ejs')
 %>
 <body>
-    <%- include('../includes/header-nav.ejs') %>
+  <%- include('../includes/header-nav.ejs') %>
 
-    <main class="container">
-        <% if(products.length > 0) { %>
-        <div class="grid-4">
-            <% for(let product of products) { %>
-            <div class="card elevation col justify-space-between align-center">
-                <h2 class="text-center" style="height: 45px; overflow: hidden;">
-                    <%= product.title || 'New Book' %>
-                </h2>
-                <img
-                    src="<%= product.imageUri %>"
-                    alt="<% product.title %>"
-                    style="height: 150px; width: 100px;"
-                />
-                <% if(product.price > 0) { %>
-                <h3 class="text-center">
-                    <%= formatCentsToDollars(product.price) %>
-                </h3>
-                <% } else { %>
-                <h3 class="text-center">Free</h3>
-                <% } %>
-                <p><%= product.description || 'No description' %></p>
-                <div class="row">
-                    <a
-                        class="btn btn-linear btn-sm"
-                        href="/products/<%= product.id %>"
-                        >Details</a
-                    >
-
-                    <%- include('../includes/addToCartButton.ejs', { product,
-                    small: true }) %>
-                </div>
-            </div>
-            <% } %>
-        </div>
+  <main class="container">
+    <% if(products.length > 0) { %>
+    <div class="grid-4">
+      <% for(let product of products) { %>
+      <div class="card elevation col justify-space-between align-center">
+        <h2 class="text-center" style="height: 45px; overflow: hidden;">
+          <%= product.title || 'New Book' %>
+        </h2>
+        <img
+          src="<%= product.imageUri %>"
+          alt="<% product.title %>"
+          style="height: 150px; width: 100px;"
+        />
+        <% if(product.price > 0) { %>
+        <h3 class="text-center">
+          <%= formatCentsToDollars(product.price) %>
+        </h3>
         <% } else { %>
-        <h2>No products available</h2>
+        <h3 class="text-center">Free</h3>
         <% } %>
-    </main>
+        <p><%= product.description || 'No description' %></p>
+        <div class="row">
+          <a class="btn btn-linear btn-sm" href="/products/<%= product._id %>"
+            >Details</a
+          >
+
+          <%- include('../includes/addToCartButton.ejs', { product, small: true
+          }) %>
+        </div>
+      </div>
+      <% } %>
+    </div>
+    <% } else { %>
+    <h2>No products available</h2>
+    <% } %>
+  </main>
 </body>
 
 <%- include('../includes/footer.ejs') %>
